# trident-chemwidgets

./: .coveragerc  .eslintrc.js  .gitignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  codecov.yml  environment.yml  install.json  make.bat  package.json  pyproject.toml  pytest.ini  setup.cfg  setup.py  trident_chemwidgets.json  tsconfig.json  webpack.config.js
.github/workflows/: build.yml
docs/: Makefile  make.bat
docs/doctrees/: develop-install.doctree  environment.pickle  index.doctree  installing.doctree  introduction.doctree  modules.doctree  setup.doctree  trident_chemwidgets.doctree  trident_chemwidgets.tests.doctree  trident_chemwidgets.widgets.doctree
docs/html/: .buildinfo  develop-install.html  genindex.html  index.html  installing.html  introduction.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.html  trident_chemwidgets.html  trident_chemwidgets.tests.html  trident_chemwidgets.widgets.html
docs/source/: conf.py  develop-install.rst  index.md  index.rst  installing.md  installing.rst  introduction.md
docsrc/: conf.py  develop-install.md  index.md  installing.md  modules.rst  trident_chemwidgets.rst  trident_chemwidgets.tests.rst  trident_chemwidgets.widgets.rst
examples/: Histogram_widget.ipynb  InteractiveMolecule_widget.ipynb  JSME_Input.ipynb  JSME_widget.ipynb  introduction.ipynb  using_histogram_widget.ipynb  using_scatter_widget.ipynb  zinc_subset.csv
src/: extension.ts  index.ts  plugin.ts  version.ts
trident_chemwidgets/: __init__.py  _frontend.py  _version.py
(+126 files in other folders)
