[bdist_wheel]
universal=1

[metadata]
name = trident_chemwidgets
version = attr: trident_chemwidgets._version.__version__
description = Jupyter widgets for working with chemical datasets
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE.txt
keywords =
    Jupyter
    Widgets
    IPython
    Chemistry
    Visualization
author = Trident Bioscience, Inc.
author_email = info@trident.bio
maintainer = Tyler Shimko
maintainer_email = tshimko@trident.bio
url = https://github.com/tridentbio/trident-chemwidgets
platforms =
    Linux
    Mac OS X
    Windows
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Jupyter

[options]
python_requires= >=3.6
install_requires = 
    ipywidgets>=7.0.0
    pandas>=1.0.0
packages=find:

[options.extras_require]
test =
    pytest>=4.6
    pytest-cov
    nbval
docs = 
    jupyter_sphinx
    nbsphinx
    nbsphinx-link
    pytest_check_links
    pypandoc
    recommonmark
    sphinx>=1.5
    sphinx-autobuild
    sphinx_rtd_theme
    furo